[package]
name = "gitlab"
version.workspace = true
edition.workspace = true
description = "gitlab functionality for wrkflw"
license.workspace = true

[dependencies]
# Internal crates
models = { path = "../models" }

# External dependencies
lazy_static.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
