[package]
name = "parser"
version.workspace = true
edition.workspace = true
description = "Parser functionality for wrkflw"
license.workspace = true

[dependencies]
# Internal crates
models = { path = "../models" }
matrix = { path = "../matrix" }

# External dependencies
jsonschema.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
