[package]
name = "runtime"
version.workspace = true
edition.workspace = true
description = "Runtime environment for wrkflw"
license.workspace = true

[dependencies]
# Internal crates
models = { path = "../models" }
logging = { path = "../logging", version = "0.4.0" }

# External dependencies
async-trait.workspace = true
once_cell = "1.19"
serde.workspace = true
serde_yaml.workspace = true
tempfile = "3.9"
tokio.workspace = true
futures = "0.3"
utils = { path = "../utils", version = "0.4.0" }
which = "4.4"
