[package]
name = "utils"
version.workspace = true
edition.workspace = true
description = "utility functions for wrkflw"
license.workspace = true

[dependencies]
# Internal crates
models = { path = "../models" }

# External dependencies
serde.workspace = true
serde_yaml.workspace = true
nix.workspace = true
